DINOv3: transform function

--- a/DINOv3/dinov3_inference.ipynb
+++ b/DINOv3/dinov3_inference.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "827ee03b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,17 @@
     ")\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.eval().to(device);"
+    "model.eval().to(device);\n",
+    "\n",
+    "# define the recommended image transform for web‑pretrained models\n",
+    "def make_transform(resize_size=224):\n",
+    "    to_tensor = transforms.ToTensor()\n",
+    "    resize = transforms.Resize((resize_size, resize_size), antialias=True)\n",
+    "    normalize = transforms.Normalize(\n",
+    "        mean=(0.485, 0.456, 0.406),\n",
+    "        std=(0.229, 0.224, 0.225),\n",
+    "    )\n",
+    "    return transforms.Compose([to_tensor, resize, normalize])\n"
    ]
   },
   {
