--- a/DINOv3/dinov3_inference.ipynb
+++ b/DINOv3/dinov3_inference.ipynb
@@ -77,8 +77,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2b50155f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1024])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "img = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "transform = make_transform()\n",
+    "inputs = transform(img).unsqueeze(0)  # add batch dimension\n",
+    "\n",
+    "# obtain features\n",
+    "with torch.inference_mode():\n",
+    "    outputs = model(inputs.to(device))\n",
+    "\n",
+    "print(outputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5ae04f9",
    "metadata": {},
    "outputs": [],
    "source": []
