VisionReasoner: inference - auto

--- a/VisionReasoner/visionreasoner_inference.ipynb
+++ b/VisionReasoner/visionreasoner_inference.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7baaba73",
    "metadata": {},
    "outputs": [
@@ -117,8 +117,6 @@
     "\n",
     "hybrid_mode = False\n",
     "yolo_model_path = \"yolov8x-worldv2.pt\"\n",
-    "refer_image_path = \"\"\n",
-    "image_prompt = \"\"\n",
     "generation_mode = False\n",
     "generation_model_name = \"gpt-image-1\"\n",
     "depth_estimation_model_path = None  # facebook/VGGT-1B\n",
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9b15272a",
    "metadata": {},
    "outputs": [
@@ -135,7 +133,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:01<00:00,  2.08it/s]\n",
+      "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:01<00:00,  2.11it/s]\n",
       "The image processor of type `Qwen2VLImageProcessor` is now loaded as a fast processor by default, even if the model checkpoint was saved with a slow processor. This is a breaking change and may produce slightly different outputs. To continue using the slow processor, instantiate this class with `use_fast=False`. Note that this behavior will be extended to all models in a future release.\n",
       "You have video processor config saved in `preprocessor.json` file which is deprecated. Video processor configs should be saved in their own `video_preprocessor.json` file. You can rename the file or load and save the processor back which renames it automatically. Loading from `preprocessor.json` will be removed in v5.0.\n"
      ]
@@ -153,10 +158,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bd70c951",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "def inference(image, task_type, query, refer_image_path=\"\", image_prompt=\"\"):\n",
+    "    if task_type == \"auto\":\n",
+    "        result, task_type = model.process_single_image(image, query, return_task_type=True)\n",
+    "    elif task_type == \"detection\":\n",
+    "        result = model.detect_objects(image, query)\n",
+    "    elif task_type == \"segmentation\":\n",
+    "        result = model.segment_objects(image, query)\n",
+    "    elif task_type == \"counting\":\n",
+    "        result = model.count_objects(image, query)\n",
+    "    elif task_type == \"generation\":\n",
+    "        result = model.generate_image(refer_image_path, image_prompt)\n",
+    "    elif task_type == \"depth_estimation\":\n",
+    "        result = model.depth_estimation(image, query)\n",
+    "    elif task_type == \"pose_estimation\":\n",
+    "        result = model.pose_estimation(image, query)\n",
+    "    else:    # VQA\n",
+    "        result = model.answer_question(image, query)\n",
+    "\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05803a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['count', 'bboxes', 'points', 'thinking', 'full_response', 'pred_answer'])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "query = \"How many plants are there in this image?\"\n",
+    "refer_image_path = \"\"\n",
+    "image_prompt = \"\"\n",
+    "\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "result = inference(\n",
+    "    image=image,\n",
+    "    task_type=task_type,\n",
+    "    query=query,\n",
+    "    refer_image_path=refer_image_path,\n",
+    "    image_prompt=image_prompt\n",
+    ")\n",
+    "\n",
+    "result.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "79541571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The task involves identifying the number of plants in the image and comparing\n",
+      "the objects to find the most closely matched ones. I'll start through the image\n",
+      "step by step:  1. First, I'll identify the plants in the image. There are two\n",
+      "distinct plants visible. 2. Next to each plant, there is a gold-colored metal\n",
+      "stand that appears to be a stand holder or stand stand. 3. The plants are are in\n",
+      "black pots, which are are are not the main focus of the image but but are are\n",
+      "are part of the plants. 4. The metal holders are are the most closely matched\n",
+      "objects to the question, as they are are the main focus of the image and the\n",
+      "question asks about the number of plants.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "print(textwrap.fill(result[\"thinking\"], width=80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6d8ef296",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<think> The task involves identifying the number of plants in the image and\n",
+      "comparing the objects to find the most closely matched ones. I'll start through\n",
+      "the image step by step:  1. First, I'll identify the plants in the image. There\n",
+      "are two distinct plants visible. 2. Next to each plant, there is a gold-colored\n",
+      "metal stand that appears to be a stand holder or stand stand. 3. The plants are\n",
+      "are in black pots, which are are are not the main focus of the image but but are\n",
+      "are are part of the plants. 4. The metal holders are are the most closely\n",
+      "matched objects to the question, as they are are the main focus of the image and\n",
+      "the question asks about the number of plants.  </think> <answer>[{\"bbox_2d\":\n",
+      "[108,354,364,518], \"point_2d\": [218,468]}, {\"bbox_2d\": [337,56,620,412],\n",
+      "\"point_2d\": [515,280]}]</answer>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(textwrap.fill(result[\"full_response\"], width=80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "098d6147",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'bbox_2d': [108, 354, 364, 518], 'point_2d': [218, 468]},\n",
+       " {'bbox_2d': [337, 56, 620, 412], 'point_2d': [515, 280]}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"pred_answer\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033111f0",
+   "metadata": {},
    "source": []
   }
  ],
