VisionReasoner: inference - segmentation

--- a/VisionReasoner/visionreasoner_inference.ipynb
+++ b/VisionReasoner/visionreasoner_inference.ipynb
@@ -303,6 +303,71 @@
    "cell_type": "markdown",
    "id": "033111f0",
    "metadata": {},
+   "source": [
+    "### task_type=\"segmentation\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "013d038d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['count', 'bboxes', 'points', 'thinking', 'full_response', 'pred_answer'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = inference(\n",
+    "    image=image,\n",
+    "    task_type=task_type,\n",
+    "    query=query,\n",
+    "    refer_image_path=refer_image_path,\n",
+    "    image_prompt=image_prompt\n",
+    ")\n",
+    "result.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fd0efbe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'count': 2,\n",
+       " 'bboxes': [[137, 479, 463, 701], [428, 76, 788, 558]],\n",
+       " 'points': [[277, 633], [655, 379]],\n",
+       " 'thinking': \" The task involves identifying the number of plants in the image and comparing the objects to find the most closely matched ones. I'll start through the image step by step:\\n\\n1. First, I'll identify the plants in the image. There are two distinct plants visible.\\n2. Next to each plant, there is a gold-colored metal stand that appears to be a stand holder or stand stand.\\n3. The plants are are in black pots, which are are are not the main focus of the image but but are are are part of the plants.\\n4. The metal holders are are the most closely matched objects to the question, as they are are the main focus of the image and the question asks about the number of plants.\\n\\n\",\n",
+       " 'full_response': '<think> The task involves identifying the number of plants in the image and comparing the objects to find the most closely matched ones. I\\'ll start through the image step by step:\\n\\n1. First, I\\'ll identify the plants in the image. There are two distinct plants visible.\\n2. Next to each plant, there is a gold-colored metal stand that appears to be a stand holder or stand stand.\\n3. The plants are are in black pots, which are are are not the main focus of the image but but are are are part of the plants.\\n4. The metal holders are are the most closely matched objects to the question, as they are are the main focus of the image and the question asks about the number of plants.\\n\\n</think>\\n<answer>[{\"bbox_2d\": [108,354,364,518], \"point_2d\": [218,468]}, {\"bbox_2d\": [337,56,620,412], \"point_2d\": [515,280]}]</answer>',\n",
+       " 'pred_answer': [{'bbox_2d': [108, 354, 364, 518], 'point_2d': [218, 468]},\n",
+       "  {'bbox_2d': [337, 56, 620, 412], 'point_2d': [515, 280]}]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c92da4b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
