--- a/OVSeg/ovseg_inference.ipynb
+++ b/OVSeg/ovseg_inference.ipynb
@@ -21,7 +21,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e724b5b9",
+   "id": "006806ea",
+   "metadata": {},
+   "source": [
+    " * Installation\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/facebookresearch/ov-seg.git OVSeg_repo\n",
+    "\n",
+    "cd OVSeg_repo\n",
+    "\n",
+    "conda create --name ovseg python=3.8 -y\n",
+    "conda activate ovseg\n",
+    "conda install pytorch==1.10.1 torchvision==0.11.2 torchaudio==0.10.1 cudatoolkit=11.3 -c pytorch -c conda-forge\n",
+    "pip install -r requirements.txt\n",
+    "\n",
+    "\n",
+    "python -m pip install detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html\n",
+    "\n",
+    "\n",
+    "cd third_party/CLIP\n",
+    "python -m pip install -Ue .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10d5f2c4",
    "metadata": {},
    "source": []
   }
