--- a/OVSeg/ovseg_inference.ipynb
+++ b/OVSeg/ovseg_inference.ipynb
@@ -49,7 +49,17 @@
    "cell_type": "markdown",
    "id": "10d5f2c4",
    "metadata": {},
-   "source": []
+   "source": [
+    "* Download model: https://drive.google.com/file/d/1cn-ohxgXDrDfkzC1QdO-fi8IjbjXmgKy/view\n",
+    "\n",
+    "```bash\n",
+    "pip install -U gdown\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "gdown --id 1cn-ohxgXDrDfkzC1QdO-fi8IjbjXmgKy\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
