--- a/SAMRefiner/samrefiner_inference.ipynb
+++ b/SAMRefiner/samrefiner_inference.ipynb
@@ -17,6 +17,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2c9880d",
+   "metadata": {},
+   "source": [
+    " * Installation\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/linyq2117/SAMRefiner.git SAMRefiner_repo\n",
+    "\n",
+    "# create conda env\n",
+    "conda create -n SAMRefiner python=3.8 -y\n",
+    "conda activate SAMRefiner\n",
+    "\n",
+    "# install packages\n",
+    "pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 --extra-index-url https://download.pytorch.org/whl/cu113\n",
+    "pip install opencv-python tqdm matplotlib scipy\n",
+    "pip install FastGeodis --no-build-isolation --no-cache-dir\n",
+    "\n",
+    "cd SAMRefiner_repo/segment-anything; pip install -e .; cd ../../\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15bb446e",
    "metadata": {},
    "source": []
