SAMRefiner: download model

--- a/SAMRefiner/samrefiner_inference.ipynb
+++ b/SAMRefiner/samrefiner_inference.ipynb
@@ -42,6 +42,18 @@
    "cell_type": "markdown",
    "id": "15bb446e",
    "metadata": {},
+   "source": [
+    "* Download model checkpoint\n",
+    "\n",
+    "```bash\n",
+    "wget https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth -O SAMRefiner_repo/checkpoints\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "261fad01",
+   "metadata": {},
    "source": []
   }
  ],
