--- a/SAMRefiner/samrefiner_inference.ipynb
+++ b/SAMRefiner/samrefiner_inference.ipynb
@@ -51,15 +51,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "261fad01",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f7d9607",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/SAMRefiner/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "sys.path.append(\"SAMRefiner_repo\")\n",
+    "\n",
+    "from segment_anything import sam_model_registry\n",
+    "from sam_refiner import sam_refiner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "87c91aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_type = \"vit_h\"\n",
+    "sam_checkpoint = \"SAMRefiner_repo/checkpoints/sam_vit_h_4b8939.pth\"\n",
+    "device = \"cuda\"\n",
+    "sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
+    "sam.eval().to(device=device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6629162",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "SAMRefiner",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
