--- a/SAMRefiner/samrefiner_inference.ipynb
+++ b/SAMRefiner/samrefiner_inference.ipynb
@@ -52,25 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0f7d9607",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pyml/anaconda3/envs/SAMRefiner/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "import numpy as np\n",
     "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
     "sys.path.append(\"SAMRefiner_repo\")\n",
-    "\n",
     "from segment_anything import sam_model_registry\n",
     "from sam_refiner import sam_refiner"
    ]
@@ -91,8 +83,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a6629162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1137, 1068)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1068, 1137)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "mask_path = \"<path/to/init_mask>\"\n",
+    "img = np.asarray(Image.open(image_path))\n",
+    "if os.path.exists(mask_path):\n",
+    "    init_masks = np.asarray(Image.open(mask_path), dtype=np.uint8)\n",
+    "else:\n",
+    "    init_masks = np.random.randint(0, 2, size=img.shape[:2], dtype=np.uint8)\n",
+    "\n",
+    "if np.max(init_masks) == 255:\n",
+    "    init_masks = init_masks / 255\n",
+    "\n",
+    "refined_masks = sam_refiner(\n",
+    "    image_path, [init_masks], sam\n",
+    ")[0]\n",
+    "                            \n",
+    "print(refined_masks.shape)\n",
+    "\n",
+    "pred_mask = Image.fromarray(255*refined_masks[0].astype(np.uint8))\n",
+    "pred_mask.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc212d8",
    "metadata": {},
    "outputs": [],
    "source": []
