CAT-Seg: installation

--- a/CAT-Seg/catseg_inference.ipynb
+++ b/CAT-Seg/catseg_inference.ipynb
@@ -19,6 +19,32 @@
    "cell_type": "markdown",
    "id": "09a0772d",
    "metadata": {},
+   "source": [
+    "## Installation\n",
+    "\n",
+    "```bash\n",
+    "conda create -n catseg python=3.8 -y\n",
+    "conda activate catseg\n",
+    "\n",
+    "conda install pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 \\\n",
+    "    pytorch-cuda=11.7 -c pytorch -c nvidia\n",
+    "\n",
+    "\n",
+    "# install detectron2:\n",
+    "python -m pip install 'git+https://github.com/facebookresearch/detectron2.git'\n",
+    "\n",
+    "# install open-clip\n",
+    "pip install open-clip-torch\n",
+    "\n",
+    "# other requirements:\n",
+    "pip install -r requirements.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "273a4c4c",
+   "metadata": {},
    "source": []
   }
  ],
