CAT-Seg: download model

--- a/CAT-Seg/catseg_inference.ipynb
+++ b/CAT-Seg/catseg_inference.ipynb
@@ -45,6 +45,23 @@
    "cell_type": "markdown",
    "id": "273a4c4c",
    "metadata": {},
+   "source": [
+    "\n",
+    "### Other setup\n",
+    "```bash\n",
+    "ln -s CATSeg_repo/datasets/ .\n",
+    "```\n",
+    "\n",
+    "## Download model\n",
+    "```bash\n",
+    "wget https://huggingface.co/spaces/hamacojr/CAT-Seg-weights/resolve/main/model_base.pth\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1758026a",
+   "metadata": {},
    "source": []
   }
  ],
